[package]
name = "checkssl"
version = "0.2.0"
authors = ["Aldi Perdana <aldidana@gmail.com>"]
edition = "2018"
description = "Check ssl certificate"
repository = "https://github.com/aldidana/checkssl/"
license = "MIT"
keywords = ["ssl", "checkssl", "check-site-ssl"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.20.7"
webpki-roots = "0.22.6"
webpki = "0.22.0"
x509-parser = "0.14.0"
chrono = { version = "0.4.13", features = [ 'serde' ] }
serde = { version = "1.0.114", features = [ 'derive' ] }
